force-app/main/default/objects/JobExecution__c/JobExecution__c.object-meta.xml
<CustomObject>
    <description>A job execution is a representation of a job template execution at a given point in time.</description>
    <label>Job Execution</label>
    <nameField>
        <displayFormat>JE-{000}</displayFormat>
        <label>Job Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>