force-app/main/default/objects/JobExecution__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <formula>IF(NOT(ISBLANK( Deployment__c )), HYPERLINK(&quot;/&quot;+Deployment__r.Promotion__c, &quot;Promotion: &quot;+Deployment__r.Promotion__r.Name, &quot;_self&quot;),
    IF(NOT(ISBLANK( Promotion__c )), HYPERLINK(&quot;/&quot;+Promotion__c, &quot;Promotion: &quot;+Promotion__r.Name, &quot;_self&quot;),
        IF(NOT(ISBLANK( UserStoryCommit__c )), HYPERLINK(&quot;/&quot;+UserStoryCommit__c, &quot;Commit: &quot;+UserStoryCommit__r.Name, &quot;_self&quot;),
            IF(NOT(ISBLANK( Snapshot__c )), HYPERLINK(&quot;/&quot;+Snapshot__c, &quot;Git Snapshot: &quot;+Snapshot__r.Name, &quot;_self&quot;),
                IF(NOT(ISBLANK( ParentRecord_Id__c )), HYPERLINK(&quot;/&quot;+ParentRecord_Id__c, &quot;Parent Record&quot;, &quot;_self&quot;), &quot;&quot;)
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Context</label>
    <type>Text</type>
</CustomField>