force-app/main/default/objects/JobExecution__c/fields/DataJson__c.field-meta.xml
<CustomField>
    <fullName>DataJson__c</fullName>
    <description>This field contains the test level for the Delete Metadata step.</description>
    <inlineHelpText>This field contains the test level for the Delete Metadata step.</inlineHelpText>
    <label>DataJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>