force-app/main/default/objects/JobExecution__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deployment in Copado is the process of moving one or multiple changes from one environment to another, following a designated Pipeline.</description>
    <inlineHelpText>Lookup field to the deployment that triggered the execution.</inlineHelpText>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>JobExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>