force-app/main/default/objects/JobExecution__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Description of the error if the job has failed.</description>
    <inlineHelpText>Description of the error if the job has failed.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>