force-app/main/default/objects/JobExecution__c/fields/Job_Step__c.field-meta.xml
<CustomField>
    <fullName>Job_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Step</label>
    <referenceTo>JobStep__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>Job_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>