force-app/main/default/objects/JobExecution__c/fields/ParentRecord_Id__c.field-meta.xml
<CustomField>
    <fullName>ParentRecord_Id__c</fullName>
    <description>Id of the parent record linked to the job execution such as, commit job template.</description>
    <inlineHelpText>Id of the parent record linked to the job execution such as, commit job template.</inlineHelpText>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>