force-app/main/default/objects/JobExecution__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the pipeline where this job execution applies.</description>
    <inlineHelpText>Lookup field to the pipeline where this job execution applies.</inlineHelpText>
    <label>Pipeline</label>
    <referenceTo>Deployment_Flow__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>JobExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>