force-app/main/default/objects/JobExecution__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the source environment.</description>
    <inlineHelpText>Name of the source environment.</inlineHelpText>
    <label>Source</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>Job_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>