force-app/main/default/objects/JobExecution__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is a reusable template with a list of steps that can be executed as part of different processes such as a commit, a promotion or a deployment.</description>
    <inlineHelpText>The Job Template used in the Job Execution process.</inlineHelpText>
    <label>Template</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>JobExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>