force-app/main/default/objects/JobExecution__c/fields/VolumeOptions__c.field-meta.xml
<CustomField>
    <fullName>VolumeOptions__c</fullName>
    <description>In this field, you can introduce a list of JSON options with the configuration for the volumes used in every new job execution.</description>
    <inlineHelpText>In this field, you can introduce a list of JSON options with the configuration for the volumes used in every new job execution.</inlineHelpText>
    <label>VolumeOptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>